--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<htmal>
+
+<head>
+	<meta charset="utf-8">
+	<title> CV - Gordon Smith</title>
+</head>>
+
+<body>
+
+	<header class="header">
+	<img src="images/profile-picture.jpg"
+	<h1 class="site-title">Gordon J Smith </header>h1>
+		
+	</header><!-- /header -->
 
 
-hello world
+</body>
+
+</htmal>html>
