--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 	<header class="header">
 	<img src="images/profile-picture.jpg"
-	<h1 class="site-title">Gordon J Smith </header>h1>
+	<h1 class="site-title">Gordon J Smith  </h1>
+	</header>
 		
 	</header><!-- /header -->
 
 
 </body>
 
-</htmal>html>
+</html>html>
