--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 
 	<header class="header">
 	<img src="images/profile-picture.jpg"
-	<h1 class="site-title">Gordon J Smith  </h1>
+	<h1 class="site-title">Gordon J Smith </h1>
 	</header>
 		
-	</header><!-- /header -->
 
 
 </body>
 
-</html>html>
+</html>
