--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<header class="header">
-	<img src="images/profile-picture.jpg"
+	<img src="images/profilepicture.jpg"
 	<h1 class="site-title">Gordon J Smith </h1>
 	</header>
 		
